<resources>
    <string name="app_name">Ornate Residency</string>
    <string name="GuestHouse">Guest House</string>
    <string name="pg">Paying Guest</string>
    <string name="fab_my_account">My Account</string>
    <string name="fab_call_us">Call Us</string>
    <string name="fab_list_pg">Pg List</string>
    <string name="fab_share_app">Share App</string>
    <string name="fab_feedback">Feedback</string>
    <string name="fab_show_faq">FAQ</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_mobile">Mobile No.</string>
    <string name="hint_property_address">Address</string>
    <string name="hint_number_rooms">No. Of Rooms :</string>
    <string name="text_login">Login</string>
    <string name="enter_phone_number">Mobile Number</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="submit_btn">Submit</string>
    <string name="fill_details">Fill These Details</string>
    <string name="search_title">Search Here</string>
    <string name="search_hint">Search Here</string>
    <string name="parking">Parking</string>
    <string name="TV">TV</string>
    <string name="Wifi">Wifi</string>
    <string name="elec">24*7 Power</string>
    <string name="meals">Meals</string>
    <string name="card">Card</string>
    <string name="water">24*7 Water</string>
    <string name="bookings">My Bookings</string>
    <string name="heat">Geyser</string>
    <string name="almirah">Almirah</string>
    <string name="amount">Amount</string>
    <string name="single">Single Person</string>
    <string name="doubles">Double Sharing</string>
    <string name="triple">Tripple Sharing</string>
    <string name="couplesAllowed">Couples are allowed.</string>
    <string name="bookpg">BOOK PG</string>
    <string name="gender">Gender</string>
    <string name="visitpg">VISIT PG</string>
    <string name="genre">Genre</string>
    <string name="pgregister">Register Property</string>

    <array name="pgName">
        <item>New Friend PG</item>
        <item>New Friend PG</item>
        <item>New Friend PG</item>
        <item>New Friend PG</item>
        <item>New Friend PG</item>
        <item>New Friend PG</item>
        <item>New Friend PG</item>
        <item>New Friend PG</item>
        <item>New Friend PG</item>
        <item>New Friend PG</item>
    </array>
    <array name="Address">
        <item>Sector 46, Gurgaon</item>
        <item>Sector 46, Gurgaon</item>
        <item>Sector 46, Gurgaon</item>
        <item>Sector 46, Gurgaon</item>
        <item>Sector 46, Gurgaon</item>
        <item>Sector 46, Gurgaon</item>
        <item>Sector 46, Gurgaon</item>
        <item>Sector 46, Gurgaon</item>
        <item>Sector 46, Gurgaon</item>
        <item>Sector 46, Gurgaon</item>
    </array>
</resources>
