<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/fill_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/divider_horizontal"/>

    <EditText
        android:padding="10dp"
        android:hint="@string/hint_name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View

        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/divider_horizontal"/>
    <EditText
        android:padding="10dp"
        android:hint="@string/hint_email"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/divider_horizontal"/>

    <LinearLayout
        android:layout_margin="10dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:text="CHOOSE"/>

        <Spinner
            android:id="@+id/genderSelectSpinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

        </Spinner>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/divider_horizontal"/>

    <Button

        android:id="@+id/submit_user_info_to_server"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:text="@string/submit_btn"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_height="wrap_content" />





</LinearLayout>