<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_list_yout_place_landing_layout"
    android:background="@drawable/animation_list"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="in.evolve.ornateresidency.Activities.ListYourPlaceActivity">

    <include layout="@layout/toolbar_material"
        android:id="@+id/toolbar"/>

   <android.support.v7.widget.CardView
       android:layout_below="@id/toolbar"
       app:cardCornerRadius="0dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

    <LinearLayout
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="5dp"
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="5dp"
                android:id="@+id/input_layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="phone"
                    android:id="@+id/input_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_mobile" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="5dp"
                android:id="@+id/input_layout_number_rooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="number"
                    android:id="@+id/input_number_rooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_number_rooms" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="5dp"
                android:id="@+id/input_layout_full_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_property_address" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:layout_margin="10dp"
            android:text="Submit Request"
            android:textSize="23sp"
            android:textColor="@android:color/white"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/submitPropertyRequestButton"
           android:background="@color/colorPrimary"/>

    </LinearLayout>
</android.support.v7.widget.CardView>
</RelativeLayout>
